text styles practice

--- a/website.html
+++ b/website.html
@@ -1,11 +1,24 @@
-<button>
-  Hello
-</button>
+<!DOCTYPE html>
+<html lang="en">
 
-<p>
-  Paragraph of text!!!
-</p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Website</title>
+</head>
 
-<a href="https://www.youtube.com/" target="_blank">
-  Link to Youtube
-</a>
+<body>
+  <button>
+    Hello
+  </button>
+
+  <p>
+    Paragraph of text!!!
+  </p>
+
+  <a href="https://www.youtube.com/" target="_blank">
+    Link to Youtube
+  </a>
+</body>
+
+</html>
