--- a/buttons.html
+++ b/buttons.html
@@ -1,83 +1,25 @@
-<style>
-  .subscribe-button {
-    background-color: #c80000;
-    color: white;
-    border: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 2px;
-    cursor: pointer;
-    margin-right: 8px;
-    transition: opacity 0.15s;
-    margin-left: 30px;
-    margin-right: 8px;
-    vertical-align: top;
-  }
+<!DOCTYPE html>
+<html lang="en">
 
-  .subscribe-button:hover {
-    opacity: 0.8;
-  }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Buttons practice</title>
+  <link rel="stylesheet" href="buttons.css">
+</head>
 
-  .subscribe-button:active {
-    opacity: 0.3;
-  }
+<body>
+  <button class="subscribe-button">
+    SUBSCRIBE
+  </button>
 
-  .join-button {
-    background-color: white;
-    border-color: rgb(41, 118, 211);
-    border-style: solid;
-    border-width: 1px;
-    color: rgb(41, 118, 211);
-    padding-top: 9px;
-    padding-bottom: 9px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 2px;
-    cursor: pointer;
-    transition: background-color 0.15s, color 0.15s;
-  }
+  <button class="join-button">
+    JOIN
+  </button>
 
-  .join-button:hover {
-    background-color: rgb(41, 118, 211);
-    color: white;
-  }
+  <button class="tweet-button">
+    Tweet
+  </button>
+</body>
 
-  .join-button:active {
-    opacity: 0.7;
-  }
-
-  .tweet-button {
-    background-color: rgb(2, 158, 255);
-    color: white;
-    border: none;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 20px;
-    margin-left: 8px;
-    font-weight: bold;
-    font-size: 15px;
-    cursor: pointer;
-    transition: box-shadow 0.15s;
-    vertical-align: top;
-  }
-
-  .tweet-button:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-  }
-</style>
-
-<button class="subscribe-button">
-  SUBSCRIBE
-</button>
-
-<button class="join-button">
-  JOIN
-</button>
-
-<button class="tweet-button">
-  Tweet
-</button>
+</html>
