--- a/youtube.html
+++ b/youtube.html
@@ -10,70 +10,34 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <style>
-    p {
-      font-family: Roboto, Arial;
-      margin-top: 0;
-      margin-bottom: 0;
-    }
-
-    .thumbnail {
-      width: 100%;
-
-    }
-
-    .search-bar {
-      font-size: 20px;
-      display: block;
-
-    }
-
-    .video-title {
-      margin-top: 0;
-      font-size: 14px;
-      font-weight: 500;
-      line-height: 20px;
-      margin-bottom: 12px;
-    }
-
-
-
-    .video-info-grid {
-      display: grid;
-      grid-template-columns: 50px 1fr;
-    }
-
-
-    .profile-picture {
-      width: 40px;
-      border-radius: 50px;
-    }
-
-    .thumbnail-row {
-      margin-bottom: 12px;
-    }
-
-    .video-author,
-    .video-stats {
-      color: rgb(96, 96, 96);
-      font-size: 12px;
-    }
-
-    .video-author {
-      margin-bottom: 4px;
-    }
-
-    .video-grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      column-gap: 18px;
-      row-gap: 50px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles/video.css">
+  <link rel="stylesheet" href="styles/general.css">
+  <link rel="stylesheet" href="styles/header.css">
 </head>
 
 <body>
-  <input class="search-bar" type="text" placeholder="Search">
+  <div class="header">
+    <div class="left-section">
+      <img class="hamburger-menu" src="styles/icons/hamburger-menu.svg" alt="">
+      <img class="youtube-logo" src="styles/icons/youtube-logo.svg" alt="">
+    </div>
+    <div class="middle-section">
+      <input class="search-bar" type="text" placeholder="Search">
+      <button class="search-button">
+        <img class="search-icon" src="styles/icons/search.svg" alt="">
+      </button>
+      <button class="voice-search-button">
+        <img class="voice-search-icon" src="styles/icons/voice-search-icon.svg" alt="">
+      </button>
+    </div>
+    <div class="right-section">
+      <img class="upload-logo" src="styles/icons/upload.svg" alt="">
+      <img class="youtube-app-logo" src="styles/icons/youtube-apps.svg" alt="">
+      <img class="notifications-logo" src="styles/icons/notifications.svg" alt="">
+      <img class="channel-dp-logo" src="/channel-dp/my-channel.jpeg" alt="">
+    </div>
+  </div>
+
 
   <div class="video-grid">
     <div class="video-preview">
